# ku-terminal

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
src/: App.vue  main.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  credentials.rs  fs.rs  lib.rs  main.rs  session.rs  sysmon.rs
src-tauri/src/pty/: local.rs
src-tauri/src/ssh/: remote.rs
src/components/: AddSessionDialog.vue  BrandMark.vue  CommandPalette.vue  FileExplorer.vue  FileNode.vue  GlobalDialog.vue  ResourceMonitor.vue  SessionSidebar.vue  TabBar.vue  TerminalArea.vue  TerminalView.vue  TopBar.vue
src/lib/: dialogs.ts  ipc.ts  theme.ts
src/stores/: sessions.ts  tabs.ts
src/styles/: global.css  tokens.css
