[package]
name = "ku-terminal"
version = "0.1.0"
description = "Ku Terminal — a Tauri terminal suite"
authors = ["you"]
edition = "2021"

[lib]
name = "ku_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
sysinfo = "0.33"
russh = "0.49"
russh-sftp = "2.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
async-trait = "0.1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
keyring = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
